Fixed bug #75799 (arg of get_defined_functions is optional)